# sdk-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: crypto_example.py  fiat_example.py  webhook_example.py
src/: __init__.py  auth.py  client.py  exceptions.py
src/crypto/: __init__.py  balances.py  deposits.py  withdrawals.py
src/fiat/: __init__.py  deposits.py
src/models/: __init__.py  common.py  crypto.py  fiat.py
src/webhooks/: __init__.py  handler.py  validator.py
